--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@angular/compiler": "~13.2.3",
     "@angular/core": "~13.2.3",
     "@angular/forms": "~13.2.3",
-    "@angular/platform-browser": "~13.2.3",
-    "@angular/platform-browser-dynamic": "~13.2.3",
+    "@angular/core": "~13.2.3",
+    "@angular/core-dynamic": "~13.2.3",
     "@angular/router": "~13.2.3",
     "@fortawesome/fontawesome-free": "^5.8.2",
     "bootstrap": "^5.1.3",
